--- a/app/.cargo/config
+++ b/app/.cargo/config
@@ -1,5 +1,6 @@
 [target.thumbv7m-none-eabi]
 rustflags = ["-C", "link-arg=-Tlink.x"]
+runner = "qemu-system-arm -cpu cortex-m3 -machine lm3s6965evb -gdb tcp::3333 -S -nographic -kernel"
 
 [build]
 target = "thumbv7m-none-eabi"
